--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "/mikes-way": "https//max09lui.github.io/mikes-way.github.io",
+  "homepage": "https//max09lui.github.io/mikes-way",
   "private": true,
   "version": "0.0.0",
   "type": "module",
